compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__pipe_mismatch_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "pub fn main() -> String {\n            Orange\n            |> eat_veggie\n         }\n\n         type Fruit{ Orange }\n         type Veg{ Lettuce }\n\n         fn eat_veggie(v: Veg) -> String {\n            \"Ok\"\n         }"
---
----- SOURCE CODE
pub fn main() -> String {
            Orange
            |> eat_veggie
         }

         type Fruit{ Orange }
         type Veg{ Lettuce }

         fn eat_veggie(v: Veg) -> String {
            "Ok"
         }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:16
  │
3 │             |> eat_veggie
  │                ^^^^^^^^^^ This function does not accept the piped type

The argument is:

    Fruit

But function expects:

    Veg
